# JPDFium

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  gradle.properties
buildSrc/src/main/kotlin/: jpdfium.library-conventions.gradle.kts  jpdfium.natives-conventions.gradle.kts
gradle/: libs.versions.toml
jpdfium/: build.gradle.kts
jpdfium-bom/: build.gradle.kts
jpdfium/src/main/java/: module-info.java
jpdfium/src/main/java/stirling/software/jpdfium/: HeaderFooter.java  HeaderFooterApplier.java  PdfDocument.java  PdfImageConverter.java  PdfMerge.java  PdfPage.java  PdfPipeline.java  PdfSplit.java  ProcessingMode.java  Watermark.java  WatermarkApplier.java
jpdfium/src/main/java/stirling/software/jpdfium/doc/: ActionType.java  Annotation.java  AnnotationKeys.java  AnnotationType.java  Attachment.java  BlankPageDetector.java  Bookmark.java  CompressOptions.java  CompressResult.java  DocInfo.java  EmbedPdfAnnotations.java  ExtractedImage.java  FormField.java  FormFieldType.java  GhostscriptHelper.java  ImageStats.java  JavaScriptReport.java  JsAction.java  MetadataTag.java  NUpLayout.java  NamedDestination.java  PageBoxes.java  PageContentSummary.java  PageObject.java  PageObjectType.java  PdfAConverter.java  PdfAnalytics.java  PdfAnnotationBuilder.java  PdfAnnotationExchange.java  PdfAnnotationExporter.java  PdfAnnotationStats.java  PdfAnnotations.java  PdfAttachments.java  PdfAutoCrop.java  PdfBackground.java  PdfBookmarkEditor.java  PdfBookmarks.java  PdfColorConverter.java  PdfColumnExtractor.java  PdfCompressor.java  (+55 more)
jpdfium/src/main/java/stirling/software/jpdfium/fonts/: FontInfo.java  FontNormalizer.java
jpdfium/src/main/java/stirling/software/jpdfium/model/: ColorScheme.java  ColorSpaceType.java  FontName.java  FontType.java  ImageFormat.java  ImageToPdfOptions.java  PageSize.java  PdfToImageOptions.java  PdfVersion.java  Position.java
jpdfium/src/main/java/stirling/software/jpdfium/panama/: ActionBindings.java  AnnotationBindings.java  Architecture.java  AttachmentBindings.java  BookmarkBindings.java  DocBindings.java  EmbedPdfAnnotationBindings.java  EmbedPdfDocumentBindings.java  FfmHelper.java  FontLib.java  FormFillBindings.java  ImageObjBindings.java  JavaScriptBindings.java  JpdfiumLib.java  LinkBindings.java  NativeLoader.java  PageEditBindings.java  PageImportBindings.java  RenderBindings.java  RepairLib.java  RustBridgeBindings.java  SignatureBindings.java  StructureBindings.java  TextPageBindings.java  ThumbnailBindings.java  WebLinkBindings.java
jpdfium/src/main/java/stirling/software/jpdfium/redact/: PdfRedactor.java  RedactOptions.java  RedactResult.java  RedactionSession.java  package-info.java
jpdfium/src/main/java/stirling/software/jpdfium/redact/pii/: EntityRedactor.java  PatternEngine.java  PiiCategory.java  package-info.java
jpdfium/src/main/java/stirling/software/jpdfium/text/: PdfBoundedText.java  PdfTableExtractor.java  PdfTextExtractor.java  Table.java
jpdfium/src/main/java/stirling/software/jpdfium/text/edit/: TextEditor.java
jpdfium/src/main/java/stirling/software/jpdfium/transform/: PdfPageBoxes.java  PdfPageGeometry.java
jpdfium/src/main/java/stirling/software/jpdfium/util/: NativeJsonParser.java
jpdfium/src/test/java/stirling/software/jpdfium/: CharPositionFidelityTest.java  CorpusRedactTest.java  GettingStartedExample.java  PdfDocumentTest.java  RealPdfIntegrationTest.java
jpdfium/src/test/java/stirling/software/jpdfium/doc/: AnnotationTypeTest.java  PdfAnnotationExchangeTest.java  PdfLayersTest.java  PdfRepairTest.java  PdfStructureEditorTest.java  RepairCorpus.java  RepairCorpusIntegrationTest.java  RepairResultTest.java
jpdfium/src/test/java/stirling/software/jpdfium/exception/: ExceptionHierarchyTest.java
jpdfium/src/test/java/stirling/software/jpdfium/fonts/: FontNormalizerTest.java
jpdfium/src/test/java/stirling/software/jpdfium/model/: RectTest.java
jpdfium/src/test/java/stirling/software/jpdfium/redact/: ObjectFissionCoordinateTest.java  ObjectFissionRedactTest.java  RedactOptionsTest.java  RedactResultTest.java  RedactTestPdfGenerator.java  RedactionSessionTest.java
jpdfium/src/test/java/stirling/software/jpdfium/redact/pii/: PiiPatternsTest.java  PiiRedactOptionsTest.java  PiiRedactResultTest.java  PiiRedactorTest.java
jpdfium/src/test/java/stirling/software/jpdfium/samples/: RunAllSamples.java  S01_Render.java  S02_TextExtract.java  S03_TextSearch.java  S04_Metadata.java  S05_Bookmarks.java  S06Test.java  S06_RedactWords.java  S07_Annotations.java  S08_FullPipeline.java  S09_Flatten.java  S10_Signatures.java  S11_Attachments.java  S12_Links.java  S13_PageImport.java  S14_StructureTree.java  S15_Thumbnails.java  S16_PageEditing.java  S17_NUpLayout.java  S18_Repair.java  S19_PdfToImages.java  S20_ImagesToPdf.java  S21_Thumbnails.java  S22_MergeSplit.java  S23_Watermark.java  S24_TableExtract.java  S25_PageGeometry.java  S26_HeaderFooter.java  S27_Security.java  S28_DocInfo.java  S29_RenderOptions.java  S30_FormReader.java  S31_ImageExtract.java  S32_PageObjects.java  S33_Encryption.java  S34_Linearizer.java  S35_Overlay.java  S36_AnnotationBuilder.java  S37_PathDrawer.java  S38_JavaScriptInspector.java  (+50 more)
jpdfium/src/test/java/stirling/software/jpdfium/text/: TextCharTest.java
native/: CMakeLists.txt  build-real.sh  build-rust.sh  setup-pdfium.sh
native/bridge/include/: jpdfium.h  jpdfium_internal.h  jpdfium_rust.h
native/bridge/src/: jpdfium_advanced.cpp  jpdfium_brotli.cpp  jpdfium_document.cpp  jpdfium_image.cpp  jpdfium_lcms.cpp  jpdfium_openjpeg.cpp  jpdfium_pdfio.cpp  jpdfium_redact.cpp  jpdfium_render.cpp  jpdfium_repair.cpp  jpdfium_stub.cpp  jpdfium_text.cpp  jpdfium_unicode.cpp
native/cmake/: generate-native-libs-txt.cmake
native/rust/: Cargo.toml
native/rust/jpdfium-impl/: Cargo.toml
native/rust/jpdfium-impl/src/: lib.rs
